Update some stuff

--- a/index.html
+++ b/index.html
@@ -239,6 +239,8 @@ Fan-Made Translations!
 <br>
 <a href="https://kyleheren.github.io/anxiety/">한국어</a>
 <br>
+<a href="https://drikki01.github.io/anxiety-malay/">Bahasa Melayu</a>
+<br>
 ...
 <br>
 <a href="https://github.com/ncase/anxiety#how-to-translate" target="_blank">(make your own?)</a>
